Stored user info and created intent for user affirmations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Affirmo</string>
+    <string name="defaultAffirmation">Click the top right button to create affirmations</string>
 </resources>
